Particle Edit make Blender Crash #91981

Closed
opened 2021-10-06 11:21:39 +02:00 by Adrien Gomez · 30 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 472.12

Blender Version
Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-10-05 22:29, hash: 26dac33ce1
Caused by 1d49293b80

Short description of error
Blender Crash when I try to Edit Particle Hair (with comb tool for example)

Exact steps for others to reproduce the error

  • Add a Sphere
  • Add a particle system, hair type
  • Go into particle edit mode
  • Try to comb

Crash

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 472.12 **Blender Version** Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-10-05 22:29, hash: `26dac33ce1` Caused by 1d49293b80 **Short description of error** Blender Crash when I try to Edit Particle Hair (with comb tool for example) **Exact steps for others to reproduce the error** - Add a Sphere - Add a particle system, hair type - Go into particle edit mode - Try to comb # Crash
Author

Added subscriber: @adrien.gomez

Added subscriber: @adrien.gomez

#92085 was marked as duplicate of this issue

#92085 was marked as duplicate of this issue

#92058 was marked as duplicate of this issue

#92058 was marked as duplicate of this issue

#91989 was marked as duplicate of this issue

#91989 was marked as duplicate of this issue
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Hi, thanks for the report. No crash here but it is unresponsive.

Confirming the report. Also this was working fine with the previous builds(eg: 18959c502d)

Hi, thanks for the report. No crash here but it is unresponsive. Confirming the report. Also this was working fine with the previous builds(eg: 18959c502d)
Contributor

Added subscriber: @Raimund58

Added subscriber: @Raimund58
Contributor

For me the same as for @PratikPB2123

For me the same as for @PratikPB2123

Added subscriber: @EvertonSchneider

Added subscriber: @EvertonSchneider

I just made the same report here. I'm unable to comb hair, blender freezes.

I just made the same report here. I'm unable to comb hair, blender freezes.

I'm able to select with "A" or select "tips" or "roots" and transform the strands with "G" "S" "R" shortcuts. But when trying to use any tool from the tool bar blender freezes.

I'm able to select with "A" or select "tips" or "roots" and transform the strands with "G" "S" "R" shortcuts. But when trying to use any tool from the tool bar blender freezes.
Contributor

Added subscriber: @vitorboschi

Added subscriber: @vitorboschi
Contributor

Running it in debug mode seems to make it hit an assertion:

BLI_assert failed: source/blender/gpu/opengl/gl_texture.cc:372, read(), at 'validate_data_format(format_, type)'
Running it in debug mode seems to make it hit an assertion: ``` BLI_assert failed: source/blender/gpu/opengl/gl_texture.cc:372, read(), at 'validate_data_format(format_, type)' ```

Added subscriber: @HooglyBoogly

Added subscriber: @HooglyBoogly

Hi! I just learned how to bisect and I can confirm that this problem came in with 18959c502d but if I compile the commit before this one the hair comb is works fine. @HooglyBoogly can you help?

Hi! I just learned how to bisect and I can confirm that this problem came in with 18959c502d but if I compile the commit before this one the hair comb is works fine. @HooglyBoogly can you help?

In #91981#1232086, @EvertonSchneider wrote:
Hi! I just learned how to bisect and I can confirm that this problem came in with 18959c502d but if I compile the commit before this one the hair comb is works fine. @HooglyBoogly can you help?

I'm sorry... I was wrong. The 18959c502d the hair comb is working...

> In #91981#1232086, @EvertonSchneider wrote: > Hi! I just learned how to bisect and I can confirm that this problem came in with 18959c502d but if I compile the commit before this one the hair comb is works fine. @HooglyBoogly can you help? I'm sorry... I was wrong. The 18959c502d the hair comb is working...
Member

I'm honestly very suspicious about that result, the curve resample node should have nothing to do with hair particle combing. I can test to try to confirm later today though.

I'm honestly very suspicious about that result, the curve resample node should have nothing to do with hair particle combing. I can test to try to confirm later today though.
Contributor

Looks like the real culptrit is 1d49293b80

Looks like the real culptrit is 1d49293b80

In #91981#1232089, @HooglyBoogly wrote:
I'm honestly very suspicious about that result, the curve resample node should have nothing to do with hair particle combing. I can test to try to confirm later today though.

I'm sorry... I'm trying to find the problem while learning how to do it... sorry about the noise here. I will double, triple check it before post here. Sorry everyone and specially @HooglyBoogly

> In #91981#1232089, @HooglyBoogly wrote: > I'm honestly very suspicious about that result, the curve resample node should have nothing to do with hair particle combing. I can test to try to confirm later today though. I'm sorry... I'm trying to find the problem while learning how to do it... sorry about the noise here. I will double, triple check it before post here. Sorry everyone and specially @HooglyBoogly
Contributor

Backtrace of the crash:

- 0  __GI_raise (sig=sig@entry=6) at ../sysdeps/unix/sysv/linux/raise.c:50
- 1  0x00007ffff6e29859 in __GI_abort () at abort.c:79
- 2  0x0000000010d10adc in _BLI_assert_abort () at /mnt/data/Devel/blender-git/blender/source/blender/blenlib/intern/BLI_assert.c:61
- 3  0x000000001072243e in blender::gpu::GLTexture::read(int, eGPUDataFormat) (this=0x6130005be048, mip=0, type=GPU_DATA_FLOAT)
    at /mnt/data/Devel/blender-git/blender/source/blender/gpu/opengl/gl_texture.cc:372
#4  0x0000000010699040 in GPU_texture_read(GPUTexture*, eGPUDataFormat, int) (tex_=0x6130005be048, data_format=GPU_DATA_FLOAT, miplvl=0)
    at /mnt/data/Devel/blender-git/blender/source/blender/gpu/intern/gpu_texture.cc:386
#5  0x00000000072687e2 in view3d_depths_create (region=0x614000011c48)
    at /mnt/data/Devel/blender-git/blender/source/blender/editors/space_view3d/view3d_draw.c:2276
#6  0x00000000072693ad in ED_view3d_depth_override
    (depsgraph=0x61a000108088, region=0x614000011c48, v3d=0x61a00000f088, obact=0x61a000195c88, mode=V3D_DEPTH_OBJECT_ONLY, r_depths=0x614000080ce0) at /mnt/data/Devel/blender-git/blender/source/blender/editors/space_view3d/view3d_draw.c:2374
#7  0x00000000061fae7e in PE_set_view3d_data (C=0x60e000000828, data=0x614000080c78)
    at /mnt/data/Devel/blender-git/blender/source/blender/editors/physics/particle_edit.c:528
#8  0x000000000623f60d in brush_edit_init (C=0x60e000000828, op=0x60f000042fd8)
    at /mnt/data/Devel/blender-git/blender/source/blender/editors/physics/particle_edit.c:4706
#9  0x000000000624370a in brush_edit_invoke (C=0x60e000000828, op=0x60f000042fd8, event=0x60d0004d43c8)
    at /mnt/data/Devel/blender-git/blender/source/blender/editors/physics/particle_edit.c:4990
#10 0x0000000002ad5728 in wm_operator_invoke
    (C=0x60e000000828, ot=0x611000092088, event=0x60d0004d43c8, properties=0x60300011e4e8, reports=0x0, poll_only=false, use_last_properties=true) at /mnt/data/Devel/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:1351
#11 0x0000000002adf543 in wm_handler_operator_call
    (C=0x60e000000828, handlers=0x614000011d80, handler_base=0x608000051aa8, event=0x60d0004d43c8, properties=0x60300011e4e8, kmi_idname=0x610000253f58 "PARTICLE_OT_brush_edit") at /mnt/data/Devel/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:2345
#12 0x0000000002ae33fe in wm_handlers_do_keymap_with_keymap_handler
    (C=0x60e000000828, event=0x60d0004d43c8, handlers=0x614000011d80, handler=0x608000051aa8, keymap=0x611000265b08, do_debug_handler=false) at /mnt/data/Devel/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:2697
#13 0x0000000002ae6e33 in wm_handlers_do_intern (C=0x60e000000828, event=0x60d0004d43c8, handlers=0x614000011d80)
    at /mnt/data/Devel/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:3024
#14 0x0000000002ae83bc in wm_handlers_do (C=0x60e000000828, event=0x60d0004d43c8, handlers=0x614000011d80)
    at /mnt/data/Devel/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:3161
#15 0x0000000002aedfa8 in wm_event_do_handlers (C=0x60e000000828)
    at /mnt/data/Devel/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:3728
- 16 0x0000000002ab62f4 in WM_main (C=0x60e000000828) at /mnt/data/Devel/blender-git/blender/source/blender/windowmanager/intern/wm.c:647
- 17 0x0000000001941cda in main (argc=1, argv=0x7fffffffe578) at /mnt/data/Devel/blender-git/blender/source/creator/creator.c:558
Backtrace of the crash: ``` - 0 __GI_raise (sig=sig@entry=6) at ../sysdeps/unix/sysv/linux/raise.c:50 - 1 0x00007ffff6e29859 in __GI_abort () at abort.c:79 - 2 0x0000000010d10adc in _BLI_assert_abort () at /mnt/data/Devel/blender-git/blender/source/blender/blenlib/intern/BLI_assert.c:61 - 3 0x000000001072243e in blender::gpu::GLTexture::read(int, eGPUDataFormat) (this=0x6130005be048, mip=0, type=GPU_DATA_FLOAT) at /mnt/data/Devel/blender-git/blender/source/blender/gpu/opengl/gl_texture.cc:372 #4 0x0000000010699040 in GPU_texture_read(GPUTexture*, eGPUDataFormat, int) (tex_=0x6130005be048, data_format=GPU_DATA_FLOAT, miplvl=0) at /mnt/data/Devel/blender-git/blender/source/blender/gpu/intern/gpu_texture.cc:386 #5 0x00000000072687e2 in view3d_depths_create (region=0x614000011c48) at /mnt/data/Devel/blender-git/blender/source/blender/editors/space_view3d/view3d_draw.c:2276 #6 0x00000000072693ad in ED_view3d_depth_override (depsgraph=0x61a000108088, region=0x614000011c48, v3d=0x61a00000f088, obact=0x61a000195c88, mode=V3D_DEPTH_OBJECT_ONLY, r_depths=0x614000080ce0) at /mnt/data/Devel/blender-git/blender/source/blender/editors/space_view3d/view3d_draw.c:2374 #7 0x00000000061fae7e in PE_set_view3d_data (C=0x60e000000828, data=0x614000080c78) at /mnt/data/Devel/blender-git/blender/source/blender/editors/physics/particle_edit.c:528 #8 0x000000000623f60d in brush_edit_init (C=0x60e000000828, op=0x60f000042fd8) at /mnt/data/Devel/blender-git/blender/source/blender/editors/physics/particle_edit.c:4706 #9 0x000000000624370a in brush_edit_invoke (C=0x60e000000828, op=0x60f000042fd8, event=0x60d0004d43c8) at /mnt/data/Devel/blender-git/blender/source/blender/editors/physics/particle_edit.c:4990 #10 0x0000000002ad5728 in wm_operator_invoke (C=0x60e000000828, ot=0x611000092088, event=0x60d0004d43c8, properties=0x60300011e4e8, reports=0x0, poll_only=false, use_last_properties=true) at /mnt/data/Devel/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:1351 #11 0x0000000002adf543 in wm_handler_operator_call (C=0x60e000000828, handlers=0x614000011d80, handler_base=0x608000051aa8, event=0x60d0004d43c8, properties=0x60300011e4e8, kmi_idname=0x610000253f58 "PARTICLE_OT_brush_edit") at /mnt/data/Devel/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:2345 #12 0x0000000002ae33fe in wm_handlers_do_keymap_with_keymap_handler (C=0x60e000000828, event=0x60d0004d43c8, handlers=0x614000011d80, handler=0x608000051aa8, keymap=0x611000265b08, do_debug_handler=false) at /mnt/data/Devel/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:2697 #13 0x0000000002ae6e33 in wm_handlers_do_intern (C=0x60e000000828, event=0x60d0004d43c8, handlers=0x614000011d80) at /mnt/data/Devel/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:3024 #14 0x0000000002ae83bc in wm_handlers_do (C=0x60e000000828, event=0x60d0004d43c8, handlers=0x614000011d80) at /mnt/data/Devel/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:3161 #15 0x0000000002aedfa8 in wm_event_do_handlers (C=0x60e000000828) at /mnt/data/Devel/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:3728 - 16 0x0000000002ab62f4 in WM_main (C=0x60e000000828) at /mnt/data/Devel/blender-git/blender/source/blender/windowmanager/intern/wm.c:647 - 17 0x0000000001941cda in main (argc=1, argv=0x7fffffffe578) at /mnt/data/Devel/blender-git/blender/source/creator/creator.c:558 ```
Member

No worries, thanks for spending the time bisecting. It's really helpful to the developer that ends up fixing the bug.

No worries, thanks for spending the time bisecting. It's really helpful to the developer that ends up fixing the bug.

Added subscribers: @fclem, @ZedDB

Added subscribers: @fclem, @ZedDB

@fclem Could you take a look?

@fclem Could you take a look?
Member

Added subscriber: @mcq

Added subscriber: @mcq
Member

Added subscriber: @rwman

Added subscriber: @rwman

This issue was referenced by 45f167237f

This issue was referenced by 45f167237f0cbebfed95e8b58b405367070ac305

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Clément Foucault self-assigned this 2021-10-12 16:47:57 +02:00

Version blender-3.0.0-alpha+master.53af51ad50ec-linux.x86_64-release.tar.xz no longer crash or hard lock when editing particle hair. Thanks for the fix ! :)

Version blender-3.0.0-alpha+master.53af51ad50ec-linux.x86_64-release.tar.xz no longer crash or hard lock when editing particle hair. Thanks for the fix ! :)
Author

Works great now! Thanks to everyone!

Works great now! Thanks to everyone!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
10 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#91981
No description provided.