source/blender/editors/space_view3d/view3d_draw.c
@@ -2297,8 +2297,13 @@ static ViewDepths *view3d_depths_create(ARegion *region)
   {
     GPUViewport *viewport = WM_draw_region_get_viewport(region);
     GPUTexture *depth_tx = GPU_viewport_depth_texture(viewport);
-    d->depths = GPU_texture_read(depth_tx, GPU_DATA_FLOAT, 0);
-
+    uint32_t *int_depths = GPU_texture_read(depth_tx, GPU_DATA_UINT_24_8, 0);
+    d->depths = (float *)int_depths;
+    /* Convert in-place. */
+    int pixel_count = GPU_texture_width(depth_tx) * GPU_texture_height(depth_tx);
+    for (int i = 0; i < pixel_count; i++) {
+      d->depths[i] = (int_depths[i] >> 8u) / (float)0xFFFFFF;
+    }
     /* Assumed to be this as they are never changed. */
     d->depth_range[0] = 0.0;
     d->depth_range[1] = 1.0;
